--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^4.12.0",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^5.0.2"
   },
