--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,11 @@
-asgiref==3.8.1
-Django==5.2.3
-djangorestframework==3.16.0
-djangorestframework_simplejwt==5.5.0
-psycopg2-binary==2.9.10
-PyJWT==2.9.0
-python-dotenv==1.1.0
-sqlparse==0.5.0
-tzdata==2025.2
-celery==5.4.0
-redis==5.0.7
-drf-nested-routers==0.93.4
-requests==2.32.3
-Pillow==10.4.0 
+Django==4.2.7
+djangorestframework==3.14.0
+django-cors-headers==4.3.1
+psycopg2-binary==2.9.9
+python-decouple==3.8
+Pillow==10.1.0
+requests==2.31.0
+openai==1.3.7
+gunicorn==21.2.0
+whitenoise==6.6.0
+dj-database-url==2.1.0 
