--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 Django==4.2.7
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
-djangorestframework-nested==0.0.4
+drf-nested-routers==0.93.4
 django-cors-headers==4.3.1
 psycopg2-binary==2.9.9
 python-decouple==3.8
