Add migrations and collectstatic to Procfile startup

--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,2 +1,2 @@
-web: gunicorn nyota_bank.wsgi:application --bind 0.0.0.0:$PORT --log-file -
+web: python manage.py migrate && python manage.py collectstatic --noinput && gunicorn nyota_bank.wsgi:application --bind 0.0.0.0:$PORT --log-file -
 release: python manage.py migrate 
