Add migration to create admin user automatically

--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,2 +1,2 @@
 web: gunicorn nyota_bank.wsgi --log-file -
-release: python manage.py migrate; python manage.py create_admin 
+release: python manage.py migrate 
